--- a/src/styles/components/button.css
+++ b/src/styles/components/button.css
@@ -31,6 +31,10 @@
   --button-bg: var(--color-primary-subtle);
 
   color: var(--color-bg-subtle);
+
+  @media (prefers-color-scheme: dark) {
+    color: inherit;
+  }
 }
 
 .button:disabled {
